--- a/WebContent/Search.html
+++ b/WebContent/Search.html
@@ -23,7 +23,7 @@
 				function searchData(isbn) {
 					$.ajax({
 						type : "GET",
-						url : "http://localhost:5100/rest/books/" + isbn+"/",
+						url : "rest/books/searchMe" + isbn,
 						success : function(data, status, jqXHR) {
 							alert("ISBN       : " + data.isbn + 
 								  "\nBook Name: " + data.title + 
