--- a/WebContent/Search.html
+++ b/WebContent/Search.html
@@ -6,7 +6,7 @@
 </script>
 <script>
 	//we are reusing this URL, somove it to a variable
-	base_url = "/rest/books/searchMe";
+	base_url = "/rest/books/";
 	meta_url = "/rest/metadata/";
 	$(document).ready(
 			function() {
