--- a/WebContent/Search.html
+++ b/WebContent/Search.html
@@ -25,9 +25,9 @@
 						type : "GET",
 						url : "rest/books/search/" + isbn,
 						success : function(data, status, jqXHR) {
-							alert("ISBN       : " + data.isbn + 
-								  "\nBook Name: " + data.title + 
-								  "\nAuthor   : " + data.author);
+							alert(/*"ISBN        : " + data.isbn + 
+								  "\nBook Name : " + data.title + 
+								  "\nAuthor    : " + data.author*/data);
 						},
 						error : function(jqXHR, status) {
 							console.log(jqXHR);
