--- a/WebContent/delete.html
+++ b/WebContent/delete.html
@@ -5,8 +5,8 @@
 </script>
 <script>
 //we are reusing this URL, somove it to a variable
-base_url="http://localhost:5100/rest/books/";
-meta_url="http://localhost:5100/rest/metadata/";
+base_url="/rest/books/";
+meta_url="/rest/metadata/";
 $(document).ready(function(){
 
     $('#book_form').submit(function(){
@@ -17,7 +17,7 @@ $(document).ready(function(){
     function deleteData(isbn){
         $.ajax({
                 type: "DELETE",
-                url: "http://localhost:5100/rest/books/"+isbn,
+                url: "/rest/books/"+isbn,
                 success: function (data, status, jqXHR) {
                     alert("deleted");
                 },
